# supplychain-kit

./: .gitattributes  .gitignore  .goreleaser.yaml  .supplychain-ignore.example  ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  Makefile  README.md  SECURITY.md  go.mod  go.sum  install.sh  uninstall.sh
.claude/: settings.json
.claude/agents/: executor.md  orchestrator.md
.github/ISSUE_TEMPLATE/: bug_report.md  false_positive.md  feature_request.md
.github/workflows/: ci.yml  release.yml
cmd/aspm-api/: main.go
cmd/aspm-cli/: main.go
cmd/aspm-scanner/: main.go
cmd/supplychain-kit/: main.go
configs/: aspm.yaml  policy-moderate.yaml  policy-permissive.yaml  policy-strict.yaml
configs/hooks/: claude-stop.sh  post-scan.sh  pre-commit.sh
configs/report-templates/: finding.md.tmpl
configs/semgrep-rules/: security-python.yaml  security-typescript.yaml
deployments/docker/: Dockerfile.api  Dockerfile.remediation  Dockerfile.scanner  docker-compose.yml
docs/: DEVELOPMENT_PLAN.md  Product Requirements Document (PRD)_ Integrated Application Security Posture Management (ASPM) Platform.md
internal/agenticsast/: agent.go
internal/api/: handlers.go  router.go
internal/claudeai/: remediation.go  remediation_test.go
internal/config/: config.go  (+1 more)
migrations/: 0001_init.sql
remediation/: pyproject.toml  requirements.txt
remediation/agents/: llm_agent.py  renovate_agent.py
remediation/api/: server.py
remediation/reports/: vex_generator.py
remediation/tests/: test_vex.py
scripts/: bootstrap.sh  install-tools.ps1  install-tools.sh
(+95 files in other folders)
