[project]
name = "aspm-remediation"
version = "0.1.0"
description = "ASPM remediation service: LLM-driven PRs, Renovate-style upgrades, and CSAF 2.0 VEX generation."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "httpx>=0.27",
  "pydantic>=2.6",
  "anthropic>=0.34",
  "openai>=1.30",
  "PyGithub>=2.3",
  "packaging>=24.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4"]

[tool.ruff]
line-length = 100
target-version = "py311"
